--- a/book.bib
+++ b/book.bib
@@ -561,6 +561,14 @@
 }
 
 
+@book{gandrud2015,
+  title = {Reproducible Research with R and RStudio},
+  author = {Gandrud, Christopher},
+  address   = {Boca Raton},
+  year = {2015},
+  publisher = {CRC Press / Taylor and Francis Group}
+}
+
 
 @incollection{Geus1996,
   title = {Ambulatory assessment of parasympathetic/sympathetic balance by impedance cardiography},
@@ -666,6 +674,23 @@
   year = {2012}
 }
 
+@article{heron2010,
+  title={Ecological momentary interventions: incorporating mobile technology into psychosocial and health behaviour treatments},
+  author={Heron, Kristin E and Smyth, Joshua M},
+  journal={British journal of health psychology},
+  volume={15},
+  number={1},
+  pages={1--39},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+
+@book{horton2015,
+  title = {Using R and RStudio for data management, statistical analysis, and graphics},
+  author = {Horton, Nicholas J and Kleinman, Ken},
+  year = {2015},
+  publisher = {Chapman and Hall/CRC}
+}
 
 
 @Article{Hufford2002,
@@ -809,6 +834,8 @@
   publisher       = {Ubiquity Press},
   url             = {http://openpsychologydata.metajnl.com/articles/10.5334/jopd.29/},
 }
+
+
 
 @article{Kroenke2009,
   author = {Kroenke, Kurt and Strine, Tara W. and Spitzer, Robert L. and Williams, Janet B.W. and Berry, Joyce T. and Mokdad, Ali H.},
